-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 15, 16
-
Component/s: hotspot
-
b04
Simply running java -Xcomp -XX:-UseExactTypes triggers the following asserts:
# Internal Error (/oracle/jdk_jdk/open/src/hotspot/share/opto/phaseX.cpp:722), pid=26692, tid=26704
# assert(t->singleton()) failed: must be a constant
Current CompileTask:
C2: 806 251 b 4 java.util.ArrayList::add (25 bytes)
Stack: [0x00007f69cefa9000,0x00007f69cf0aa000], sp=0x00007f69cf0a66e0, free space=1013k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1444704] PhaseTransform::makecon(Type const*)+0x174
V [libjvm.so+0x142b4c5] Parse::array_store_check()+0xba5
V [libjvm.so+0x1413f68] Parse::array_store(BasicType)+0x128
V [libjvm.so+0x142009a] Parse::do_one_bytecode()+0x14ca
V [libjvm.so+0x140c7e1] Parse::do_one_block()+0x601
V [libjvm.so+0x140d6cf] Parse::do_all_blocks()+0x11f
V [libjvm.so+0x1411c34] Parse::Parse(JVMState*, ciMethod*, float)+0xbd4
V [libjvm.so+0x755725] ParseGenerator::generate(JVMState*)+0x115
V [libjvm.so+0xa3a9a1] Parse::do_call()+0x551
V [libjvm.so+0x141ff62] Parse::do_one_bytecode()+0x1392
V [libjvm.so+0x140c7e1] Parse::do_one_block()+0x601
V [libjvm.so+0x140d6cf] Parse::do_all_blocks()+0x11f
V [libjvm.so+0x1411c34] Parse::Parse(JVMState*, ciMethod*, float)+0xbd4
V [libjvm.so+0x755725] ParseGenerator::generate(JVMState*)+0x115
V [libjvm.so+0x907120] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xcf0
V [libjvm.so+0x754025] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x175
V [libjvm.so+0x9168a0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd60
V [libjvm.so+0x917668] CompileBroker::compiler_thread_loop()+0x6c8
V [libjvm.so+0x16c337c] JavaThread::thread_main_inner()+0x21c
V [libjvm.so+0x16c90f0] Thread::call_run()+0x100
V [libjvm.so+0x13cd126] thread_native_entry(Thread*)+0x116
# Internal Error (/oracle/jdk_jdk/open/src/hotspot/share/opto/graphKit.cpp:2848), pid=26511, tid=26523
# Error: assert(recv_xtype->klass_is_exact()) failed
Current CompileTask:
C2: 1102 422 b 4 sun.nio.fs.UnixFileSystem::getPath (105 bytes)
Stack: [0x00007f34f3cfd000,0x00007f34f3dfe000], sp=0x00007f34f3dfa040, free space=1012k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xc016e4] GraphKit::type_check_receiver(Node*, ciKlass*, float, Node**)+0x3d4
V [libjvm.so+0x75ca8d] PredictedCallGenerator::generate(JVMState*)+0x4bd
V [libjvm.so+0xa3a9a1] Parse::do_call()+0x551
V [libjvm.so+0x141ff62] Parse::do_one_bytecode()+0x1392
V [libjvm.so+0x140c7e1] Parse::do_one_block()+0x601
V [libjvm.so+0x140d6cf] Parse::do_all_blocks()+0x11f
V [libjvm.so+0x1411c34] Parse::Parse(JVMState*, ciMethod*, float)+0xbd4
V [libjvm.so+0x755725] ParseGenerator::generate(JVMState*)+0x115
V [libjvm.so+0xa3a9a1] Parse::do_call()+0x551
V [libjvm.so+0x141ff62] Parse::do_one_bytecode()+0x1392
V [libjvm.so+0x140c7e1] Parse::do_one_block()+0x601
V [libjvm.so+0x140d6cf] Parse::do_all_blocks()+0x11f
V [libjvm.so+0x1411c34] Parse::Parse(JVMState*, ciMethod*, float)+0xbd4
V [libjvm.so+0x755725] ParseGenerator::generate(JVMState*)+0x115
V [libjvm.so+0xa3a9a1] Parse::do_call()+0x551
V [libjvm.so+0x141ff62] Parse::do_one_bytecode()+0x1392
V [libjvm.so+0x140c7e1] Parse::do_one_block()+0x601
V [libjvm.so+0x140d6cf] Parse::do_all_blocks()+0x11f
V [libjvm.so+0x1411c34] Parse::Parse(JVMState*, ciMethod*, float)+0xbd4
V [libjvm.so+0x755725] ParseGenerator::generate(JVMState*)+0x115
V [libjvm.so+0x907120] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xcf0
V [libjvm.so+0x754025] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x175
V [libjvm.so+0x9168a0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd60
V [libjvm.so+0x917668] CompileBroker::compiler_thread_loop()+0x6c8
V [libjvm.so+0x16c337c] JavaThread::thread_main_inner()+0x21c
V [libjvm.so+0x16c90f0] Thread::call_run()+0x100
V [libjvm.so+0x13cd126] thread_native_entry(Thread*)+0x116
# Internal Error (/oracle/jdk_jdk/open/src/hotspot/share/opto/phaseX.cpp:722), pid=26692, tid=26704
# assert(t->singleton()) failed: must be a constant
Current CompileTask:
C2: 806 251 b 4 java.util.ArrayList::add (25 bytes)
Stack: [0x00007f69cefa9000,0x00007f69cf0aa000], sp=0x00007f69cf0a66e0, free space=1013k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1444704] PhaseTransform::makecon(Type const*)+0x174
V [libjvm.so+0x142b4c5] Parse::array_store_check()+0xba5
V [libjvm.so+0x1413f68] Parse::array_store(BasicType)+0x128
V [libjvm.so+0x142009a] Parse::do_one_bytecode()+0x14ca
V [libjvm.so+0x140c7e1] Parse::do_one_block()+0x601
V [libjvm.so+0x140d6cf] Parse::do_all_blocks()+0x11f
V [libjvm.so+0x1411c34] Parse::Parse(JVMState*, ciMethod*, float)+0xbd4
V [libjvm.so+0x755725] ParseGenerator::generate(JVMState*)+0x115
V [libjvm.so+0xa3a9a1] Parse::do_call()+0x551
V [libjvm.so+0x141ff62] Parse::do_one_bytecode()+0x1392
V [libjvm.so+0x140c7e1] Parse::do_one_block()+0x601
V [libjvm.so+0x140d6cf] Parse::do_all_blocks()+0x11f
V [libjvm.so+0x1411c34] Parse::Parse(JVMState*, ciMethod*, float)+0xbd4
V [libjvm.so+0x755725] ParseGenerator::generate(JVMState*)+0x115
V [libjvm.so+0x907120] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xcf0
V [libjvm.so+0x754025] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x175
V [libjvm.so+0x9168a0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd60
V [libjvm.so+0x917668] CompileBroker::compiler_thread_loop()+0x6c8
V [libjvm.so+0x16c337c] JavaThread::thread_main_inner()+0x21c
V [libjvm.so+0x16c90f0] Thread::call_run()+0x100
V [libjvm.so+0x13cd126] thread_native_entry(Thread*)+0x116
# Internal Error (/oracle/jdk_jdk/open/src/hotspot/share/opto/graphKit.cpp:2848), pid=26511, tid=26523
# Error: assert(recv_xtype->klass_is_exact()) failed
Current CompileTask:
C2: 1102 422 b 4 sun.nio.fs.UnixFileSystem::getPath (105 bytes)
Stack: [0x00007f34f3cfd000,0x00007f34f3dfe000], sp=0x00007f34f3dfa040, free space=1012k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xc016e4] GraphKit::type_check_receiver(Node*, ciKlass*, float, Node**)+0x3d4
V [libjvm.so+0x75ca8d] PredictedCallGenerator::generate(JVMState*)+0x4bd
V [libjvm.so+0xa3a9a1] Parse::do_call()+0x551
V [libjvm.so+0x141ff62] Parse::do_one_bytecode()+0x1392
V [libjvm.so+0x140c7e1] Parse::do_one_block()+0x601
V [libjvm.so+0x140d6cf] Parse::do_all_blocks()+0x11f
V [libjvm.so+0x1411c34] Parse::Parse(JVMState*, ciMethod*, float)+0xbd4
V [libjvm.so+0x755725] ParseGenerator::generate(JVMState*)+0x115
V [libjvm.so+0xa3a9a1] Parse::do_call()+0x551
V [libjvm.so+0x141ff62] Parse::do_one_bytecode()+0x1392
V [libjvm.so+0x140c7e1] Parse::do_one_block()+0x601
V [libjvm.so+0x140d6cf] Parse::do_all_blocks()+0x11f
V [libjvm.so+0x1411c34] Parse::Parse(JVMState*, ciMethod*, float)+0xbd4
V [libjvm.so+0x755725] ParseGenerator::generate(JVMState*)+0x115
V [libjvm.so+0xa3a9a1] Parse::do_call()+0x551
V [libjvm.so+0x141ff62] Parse::do_one_bytecode()+0x1392
V [libjvm.so+0x140c7e1] Parse::do_one_block()+0x601
V [libjvm.so+0x140d6cf] Parse::do_all_blocks()+0x11f
V [libjvm.so+0x1411c34] Parse::Parse(JVMState*, ciMethod*, float)+0xbd4
V [libjvm.so+0x755725] ParseGenerator::generate(JVMState*)+0x115
V [libjvm.so+0x907120] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xcf0
V [libjvm.so+0x754025] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x175
V [libjvm.so+0x9168a0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd60
V [libjvm.so+0x917668] CompileBroker::compiler_thread_loop()+0x6c8
V [libjvm.so+0x16c337c] JavaThread::thread_main_inner()+0x21c
V [libjvm.so+0x16c90f0] Thread::call_run()+0x100
V [libjvm.so+0x13cd126] thread_native_entry(Thread*)+0x116
- duplicates
-
JDK-8316655 Development VM Option crashes the JVM on OpenJDK11 (disable UseExactTypes)
-
- Closed
-