8248234: Disabling UseExactTypes crashes C2

Remove the flag since it is broken, untested and hasn't been used in many years.

Reviewed-by: kvn, redestad, neliasso